kubernetes-manifests/deployment-svc-a-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-a-v2
  labels:
    app: svc-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-a
      version: v2
  template:
    metadata:
      labels:
        app: svc-a
        version: v2
    spec:
      containers:
        - name: svc-a
          image: dakshsawhneyy/demo-service-a:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: "100m" # Request 1/10th of a CPU core
              memory: "128Mi" # Request 128 Mebibytes of memory
            limits:
              memory: "256Mi"
              cpu: "300m"
