kubernetes-manifests/deployment-svc-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-b
  labels:
    app: svc-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-b
  template:
    metadata:
      labels:
        app: svc-b
    spec:
      containers:
        - name: svc-b
          image: dakshsawhneyy/demo-service-b:e8476e7638613e27ee932f6de5b792e09d0bf6d3
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
