kubernetes-manifests/service-svc-b.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-b-service
  labels:
    app: svc-b
spec:
  selector:
    app: svc-b
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
